# RESTful

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 496c58a1b082_add_employee_model.py
app/: main.py
app/api/: main.py
app/api/routers/: authorization.py  dependencies.py  employee.py
app/api/schemas/: employee.py
app/core/: config.py  exceptions.py
app/core/security/: auth.py  security.py
app/db/: session.py
app/db/models/: employee.py
app/db/repositories/: employee.py
app/services/: employee.py
tests/: conftest.py
tests/app/routers/: test_employee.py
